--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "postinstall": "npm install --build-from-source"
   },
   "author": "Dhruv Parmar",
   "license": "ISC",
